# janitor-ai-multichat

./: README.md  multiplayer-ai-chat.md
multiplayer-ai-chat/: DEMO_PREP.md  DEPLOY.md  QUICKSTART.md  README.md  VOICE_SETUP.md
multiplayer-ai-chat/backend/: .env  package-lock.json  package.json
multiplayer-ai-chat/backend/src/: server.js
multiplayer-ai-chat/backend/src/api/: jllm.js
multiplayer-ai-chat/backend/src/services/: contextManager.js  responseScheduler.js  summarizer.js
multiplayer-ai-chat/backend/src/utils/: tokenCounter.js
multiplayer-ai-chat/frontend/: index.html  package-lock.json  package.json  railway.toml
multiplayer-ai-chat/frontend/src/: App.jsx
multiplayer-ai-chat/frontend/src/components/: AICharacter.jsx  ChatRoom.jsx  MessageInput.jsx  MessageList.jsx  VoiceRoom.jsx
multiplayer-ai-chat/frontend/src/hooks/: useSocket.js
multiplayer-ai-chat/voice-agent/: .env.example  README.md  pyproject.toml
multiplayer-ai-chat/voice-agent/src/: agent.py
